Changes in Mobile and Backend Auth
